# serializer version: 1
# name: test_delivery_status_cli
  '''
  {
    "manifest_id": "20120114T120001-product1-2824",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "status": "todo",
        "changelog": [
          {
            "step": "creation",
            "timestamp": "2012-01-14T12:00:01Z",
            "step_status": "success"
          },
          {
            "step": "push",
            "timestamp": "2012-01-14T12:00:01Z",
            "step_status": "success",
            "comment": "Upload operation pushed files in 0.00 seconds with 2 successful files and 0 errored files."
          }
        ],
        "files": [
          {
            "key_suffix": "tests/resources/file1.txt"
          },
          {
            "key_suffix": "tests/resources/file2.txt"
          }
        ]
      }
    ],
    "creation_time": "2012-01-14T12:00:01Z",
    "status": "todo"
  }
  '''
# ---
# name: test_delivery_status_python_interface
  '''
  {
    "manifest_id": "20120114T120001-product1-2824",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "upload",
        "status": "todo",
        "status_timestamp": null,
        "error": null,
        "changelog": [
          {
            "step": "creation",
            "timestamp": "2012-01-14T12:00:01Z",
            "step_status": "success",
            "error": null,
            "comment": null
          },
          {
            "step": "push",
            "timestamp": "2012-01-14T12:00:01Z",
            "step_status": "success",
            "error": null,
            "comment": "Upload operation pushed files in 0.00 seconds with 2 successful files and 0 errored files."
          }
        ],
        "files": [
          {
            "key_suffix": "tests/resources/file1.txt",
            "status_timestamp": null,
            "error": null
          },
          {
            "key_suffix": "tests/resources/file2.txt",
            "status_timestamp": null,
            "error": null
          }
        ]
      }
    ],
    "creation_time": "2012-01-14T12:00:01Z",
    "status": "todo",
    "status_timestamp": null,
    "error": null
  }
  '''
# ---
